# jupysql-plugin

./: .eslintrc.js  .gitignore  CHANGELOG.md  README.md  RELEASE.md  environment.dev.yml  environment.yml  install.json  jest.config.js  noxfile.py  package-lock.json  package.json  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  test-environment.yml  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: ci.yaml  update_galata_references.yaml  update_snapshots.yaml
autocompletion/: .gitignore  .prettierignore  LICENSE  README.md  RELEASE.md  install.json  package.json  pyproject.toml  tsconfig.json
autocompletion/.github/workflows/: build.yml  check-release.yml
autocompletion/autocompletion/: __init__.py
autocompletion/src/: customconnector.ts  index.ts
doc/: README.md
examples/: widget.ipynb
jupysql-backend/: __init__.py  handlers.py
jupysql-plugin/: __init__.py
jupysql_autocompletion/: __init__.py
jupysql_plugin/: __init__.py  _widget.py  _widgets.py  exceptions.py  widget.py
jupysql_plugin/_widgets/: __init__.py  connector_widget.py
jupysql_plugin/const/: dashboard.py
jupysql_plugin/server_handlers/: dashboard.py
jupysql_plugin/widgets/: __init__.py  connections.py  connector_widget.py  db_templates.py
jupyter-config/jupyter_notebook_config.d/: jupysql_plugin.json
jupyter-config/jupyter_server_config.d/: jupysql_plugin.json
jupyter-config/nb-config/: jupysql_plugin.json  jupyterlab_examples_server.json
jupyter-config/server-config/: jupysql_plugin.json  jupyterlab_examples_server.json
schema/: settings-example.json
settings-schema/: settings.json
src/: comm.ts  dialog.tsx  extension.ts  formatter.ts  index-widgets.ts  index.ts  table-widget.ts  version.ts  widget.ts
src/__tests__/: dialog.spec.tsx  jupysql_autocompletion.spec.ts  jupysql_plugin.spec.ts
src/completer/: customconnector.ts  index.ts  keywords.json
src/const/: env.ts
src/deploy-notebook/: index.ts
src/editor/: editor.ts  index.ts
src/formatter/: formatter.ts  index.ts
src/schema/: settings.json
src/settings/: index.ts
src/syntax-highlight/: index.ts
src/utils/: helper-functions.ts  util.ts
src/widgets/: connector.ts  form.ts  index.ts  table.ts
style/: connector.css  widget.css
tests/: conftest.py  test_connections.py  test_connector_widget.py  test_db_templates.py  test_server_extension.py
ui-tests/: README.md  jupyter_server_test_config.py  package.json  playwright.config.js
ui-tests/notebooks/: connections.ini  connectorWidget.ipynb  input-syntax-highlighting.ipynb  widgets.ipynb
ui-tests/test-results/tests-jupysql_plugin-test-Light-theme-stuff/: video.webm
ui-tests/tests/: completer.test.ts  deploy_sql.test.ts  format_sql.test.ts  jupysql_autocompletion.spec.ts  jupysql_plugin.spec.ts  jupysql_plugin.test.ts  share_notebook.test.ts  utils.ts  widget.test.ts  widget2.test.ts  widget3.test.ts
ui-tests/tests/notebooks/: widgets.ipynb
