[build-system]
requires = [
    "hatchling>=1.10.0",
    "jupyterlab>=4.0.0",
    "hatch-nodejs-version",
]
build-backend = "hatchling.build"

[project]
name = "jupysql-plugin"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = ["ploomber-core"]

dynamic = ["version", "description", "authors", "urls", "keywords"]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.sdist]
artifacts = ["jupysql_plugin/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"jupysql_plugin/labextension" = "share/jupyter/labextensions/jupysql-plugin"
"install.json" = "share/jupyter/labextensions/jupysql-plugin/install.json"
"jupyter-config/jupyter_server_config.d" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.hooks.version]
path = "jupysql_plugin/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "jupysql_plugin/labextension/static/style.js",
    "jupysql_plugin/labextension/package.json",
]
skip-if-exists = ["jupysql_plugin/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "install:extension"
npm = ["jlpm"]
source_dir = "src"
build_dir = "jupysql_plugin/labextension"

[tool.jupyter-releaser.options]
version_cmd = "hatch version"

[tool.jupyter-releaser.hooks]
before-build-npm = [
    "python -m pip install jupyterlab~=4.0",
    "jlpm",
    "jlpm build:prod",
]
before-build-python = ["jlpm clean:all"]

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.nbqa.addopts]
flake8 = [
    # notebooks allow non-top imports
    "--extend-ignore=E402",
    # jupysql notebooks might have "undefined name" errors
    # due to the << operator
    # W503, W504 ignore line break after/before
    # binary operator since they are conflicting
    "--ignore=F821, W503, W504",
]

[tool.pkgmt]
github = "ploomber/jupysql-plugin"
env_name = "jupysql-plugin"
package_name = "jupysql_plugin"
